--- a/app/views/days/show.html.erb
+++ b/app/views/days/show.html.erb
@@ -24,32 +24,13 @@
       </div>
 
      <div class="col-xs-10 col-sm-5 plat_ingredients">
-      <ul class="list-inline">
+      <ul id="ingredientsimples-<%= plat.id %>", class="list-inline">
       <% plat.ingredients.each do |ingredient| %>
-        <li data-ingredient-id="<%= ingredient.id %>"> <%= ingredient.name %> <%= link_to menu_day_repa_plat_ingredient_path(menu_id: @menu.id, day_id: ingredient.plat.repa.day.id, repa_id: ingredient.plat.repa.id, plat_id: ingredient.plat.id, id: ingredient.id) , method: :delete, remote: true do %> <i class="fas fa-times"></i> <% end %>
-        </li>
+        <%= render 'ingredients/showsimple', menu_id: @menu.id, day_id: @day.id, repa_id: plat.repa.id, id: plat.id, ingredient: ingredient %>
       <% end %>
       </ul>
-      <div class="row add_ingredient">
-  <%= simple_form_for([plat, @ingredient], url: menu_day_repa_plat_ingredients_path(menu_id: @menu.id, day_id: plat.repa.day.id, repa_id: plat.repa.id, plat_id: plat.id), method: :post, remote: true) do |f| %>
-    <div class="col-xs-12 col-sm-6">
-    <%= f.input :name, label: false, placeholder: "Ingrédient" %>
-    </div>
 
-    <div class="col-xs-12 col-sm-4">
-    <%= f.input :instock, label: "En stock", class: "stock_check" %>
-    </div>
-    <%= f.hidden_field :plat_id, value: plat.id %>
-    <div class="col-xs-12 col-sm-2">
-    <%= button_tag type: 'submit', class: "submit-buttons" do %>
-        <i class="fas fa-check"></i>
-    <% end %>
-    </div>
-
-  <% end %>
-</div>
-     </div>
-     <div class="col-xs-2 col-sm-2 plat-moreinfo">
+        <%= render 'ingredients/formsimple', menu: @menu, day: plat.repa.day, repa: plat.repa, plat: plat %>
        <%= link_to "+ de détails", menu_day_repa_plat_path(menu_id: @menu.id, day_id: plat.repa.day.id, repa_id: plat.repa.id, id: plat.id )  %>
      </div>
 </div>
