--- a/app/views/ingredients/create.js.erb
+++ b/app/views/ingredients/create.js.erb
@@ -1,19 +1,32 @@
-function refreshForm(innerHTML) {
-  const newIngredientForm = document.getElementById('new_ingredient');
-  newIngredientForm.innerHTML = innerHTML;
-}
+  function refreshForm(innerHTML) {
+    const newIngredientForm = document.getElementById('new_ingredient');
+    newIngredientForm.innerHTML = innerHTML;
+  }
 
-function addIngredient(ingredientHTML) {
+  function addIngredient(ingredientHTML) {
 
-  const ingredients = document.getElementById('ingredients');
-  ingredients.insertAdjacentHTML('beforeend', ingredientHTML);
-}
+    const ingredientsid = document.getElementById('ingredientsid');
+    ingredientsid.insertAdjacentHTML('beforeend', ingredientHTML);
+  }
 
-<% if @ingredient.errors.present? %>
+  function addIngredientSimple(ingredientHTML) {
 
-  refreshForm('<%= j render "ingredients/form", menu: @menu, day: @day, repa: @repa, plat: @plat, ingredient: @ingredient %>');
-<% else %>
+    const ingredients = document.getElementById("ingredientsimples-<%= @plat.id %>");
+    ingredients.insertAdjacentHTML('beforeend', ingredientHTML);
+  }
 
-  addIngredient('<%= j render "ingredients/show", ingredient: @ingredient %>');
-  refreshForm('<%= j render "ingredients/form", menu: @menu, day: @day, repa: @repa, plat: @plat, ingredient: @new_ingredient %>');
-<% end %>
+  <% if @controllerreference === "plats" %>
+    <% if @ingredient.errors.present? %>
+      refreshForm('<%= j render "ingredients/form", menu: @menu, day: @day, repa: @repa, plat: @plat, ingredient: @ingredient %>');
+    <% else %>
+      addIngredient('<%= j render "ingredients/show", ingredient: @ingredient %>');
+      refreshForm('<%= j render "ingredients/form", menu: @menu, day: @day, repa: @repa, plat: @plat, ingredient: @new_ingredient %>');
+    <% end %>
+  <% elsif @controllerreference === "days" %>
+    <% if @ingredient.errors.present? %>
+      refreshForm('<%= j render "ingredients/formsimple", menu: @menu, day: @day, repa: @repa, plat: @plat, ingredient: @ingredient %>');
+    <% else %>
+      addIngredientSimple('<%= j render "ingredients/showsimple", ingredient: @ingredient %>');
+      refreshForm('<%= j render "ingredients/formsimple", menu: @menu, day: @day, repa: @repa, plat: @plat, ingredient: @new_ingredient %>');
+    <% end %>
+  <% end %>
