--- a/app/views/todos/create.js.erb
+++ b/app/views/todos/create.js.erb
@@ -4,14 +4,14 @@
   }
 
   function addTodo(todoHTML) {
-    const todos = document.getElementById("todos-<%= @todo.ingredient.id %>");
+    const todos = document.getElementById("todos-<%=@todo.ingredient.id%>");
     todos.insertAdjacentHTML('beforeend', todoHTML);
   }
 
   <% if @todo.errors.present? %>
-    refreshForm('<%= j render "todos/form", menu: @menu, todo: @todo %>');
+    refreshForm('<%= j render "todos/form", menu: @menu, ingredient: @todo.ingredient, todo: @todo %>');
   <% else %>
     addTodo('<%= j render "todos/show", todo: @todo %>');
-    refreshForm('<%= j render "todos/form", menu: @menu, todo: @new_todo %>');
+    refreshForm('<%= j render "todos/form", menu: @menu, ingredient: @todo.ingredient, todo: @new_todo %>');
   <% end %>
 
