--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,15 @@
-<div class="home-page">
-  <div class="home-container">
-    <h1>Avec Batchka,<br>je simplifie la préparation de mes repas.</h1>
 
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://res.cloudinary.com/annabplr/image/upload/v1546857659/background-image-vegetables.jpg');">
+  <div class="banner-content">
+    <h1>Avec Batchka,<br>je simplifie la préparation de mes repas.</h1>
     <div class="home-buttons">
-      <a href="#home-explanations", class="home-button">Je découvre</a>
+    <a href="#home-explanations", class="home-button">Je découvre</a>
     </div>
   </div>
 </div>
 
 <div id="home-explanations">
-  <div class="home-container">
+  <div class="container">
   <h2>Batchka c'est ...</h2>
 <p>Prendre 5 à 10 minutes, une fois par semaine, pour :
   <ul>
