--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,16 +3,29 @@ body {
   background-color: $green;
 }
 
-.home-page, #home-explanations {
+.banner {
+  color: white;
+  text-align: center;
+  height: 100vh;
+  /* if you have a 70px navbar => height: calc(100vh - 70px); */
+  background-size: cover !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.banner h1 {
+  font-size: 50px;
+  font-weight: bold;
+  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+}
+
+#home-explanations {
   margin-top: 70px;
   display: flex;
   justify-content: center;
   width: 100%;
   min-height: calc(100vh - 110px);
 }
-
-#home-explanations .home-container {
-  margin-top: 50px; }
 
 .home-container {
   width: 90%;
@@ -27,7 +40,7 @@ body {
 
 .home-buttons {
   margin-top: 10%;
-  width: 100%;
+  width: 20vh;
   margin-left: 40%;
 }
 
@@ -36,6 +49,7 @@ body {
   color: white;
   font-weight: bold;
   margin-bottom: 20px;
+
   &:active {
     color: white;
     text-decoration: none;
