--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,26 +3,12 @@ body {
   background-color: $green;
 }
 
-.banner {
-  color: white;
-  text-align: center;
-  height: 100vh;
-  /* if you have a 70px navbar => height: calc(100vh - 70px); */
-  background-size: cover !important;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.banner h1 {
-  font-size: 50px;
-  font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-}
-
 #home-explanations {
   margin-top: 70px;
+  margin-bottom: 50px;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
   min-height: calc(100vh - 110px);
 }
@@ -38,26 +24,26 @@ body {
   }
 }
 
-.home-buttons {
-  margin-top: 10%;
-  width: 20vh;
-  margin-left: 40%;
-}
-
-.home-button {
-  padding: 10px 15px;
-  color: white;
-  font-weight: bold;
-  margin-bottom: 20px;
-
-  &:active {
-    color: white;
-    text-decoration: none;
-    border-bottom: .2em solid white;
+.home-card {
+  height: 180px;
+  display: flex;
+  justify-content: center;
+  .home-card-inside {
+    width: 80%;
+    background-color: white;
+    margin-top: 10px;
   }
-  &:hover {
-    color: white;
-    text-decoration: none;
-    border-bottom: .2em solid white;
+  .home-image {
+    display: flex;
+    justify-content: center;
+    margin-top: 8%;
+    width: 100%;
+  }
+  img {
+    margin-bottom: 2vh;
+  }
+  p {
+    color: $gray;
+    text-align: center;
   }
 }
