js change background navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,10 @@
 /* Main navbar */
 .navbar-batchka {
   background: transparent;
-  width: 90%;
+  width: 100%;
   position: fixed;
   top: 0%;
-  transition: all 0.3s ease;
+  transition: 0.5s background-color ease;
   height: 70px;
   padding: 0px 30px;
   display: flex;
@@ -12,7 +12,14 @@
   justify-content: space-between;
 }
 
+.navbar-batchka-green {
+  background: $green;
+}
 /* Logo */
+
+.navbar-batchka-brand:hover {
+  text-decoration: none;
+}
 .navbar-batchka-brand img {
   height: 50px;
 }
@@ -39,11 +46,11 @@
 
 /* Navbar link */
 .navbar-batchka-link {
-  color: #616668;
+  color: white;
   font-size: 14px;
 }
 .navbar-batchka-link:hover {
-  color: #da552f;
+  color: $gray;
   text-decoration: none;
 }
 
