--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-batchka">
   <!-- Logo -->
-  <%= link_to root_path, class: "navbar-batchka-brand" do %>
-    <%= image_tag "https://www.joliesdates.fr/wp-content/uploads/2018/02/Fichier-4.png", height: 50 %>
+  <%= link_to menus_path, class: "navbar-batchka-brand" do %>
+    <p class="logo">batchka</p>
   <% end %>
 
   <!-- Right Navigation -->
