--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,7 +4,7 @@ body {
 }
 
 #home-explanations {
-  margin-top: 70px;
+  padding-top: 50px;
   margin-bottom: 50px;
   display: flex;
   justify-content: center;
