--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -26,9 +26,8 @@
 
 /* User Avatar */
 .navbar-batchka .avatar {
-  height: 35px;
-  width: 35px;
-  border-radius: 50%;
+  font-size: 2.5em;
+  padding-right: 30%;
 }
 
 /* Right section */
