--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container navbar-space">
 
-  <h1>Menus#index</h1>
+  <h1>Mes menus</h1>
 
 
 
@@ -63,6 +63,8 @@
       <% end %>
     </div>
   </div>
+
+  <h3>Tous mes menus</h3> <p>Afficher</p>
 
 
 <div class="menu_liens">
