--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
 body {
-  background-color: $green;
+  background-color: white;
 }
 
 #home-explanations {
@@ -50,4 +50,9 @@ body {
 
 .navbar-space{
   padding-top: 30px;
+}
+
+.pages-home{
+  background-color: $blue;
+
 }
