--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,5 +6,6 @@ $blue: #a9ccbf;
 $yellow: #FDB631;
 $orange: #ff9f8c;
 $green: #4D9078;
+$dark-gray: #A9A9A9;
 $gray: #cacfd6;
 $light-gray: #F4F4F4;
