--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
 <div id="home-explanations">
   <div class="container">
     <h2>Batchka c'est ...</h2>
-      <p>Prendre 5 à 10 minutes, une fois par semaine, pour :</p>
+      <h3>Prendre 5 à 10 minutes, une fois par semaine, pour :</h3>
       <div class="row">
         <div class="col-xs-12 col-sm-4 home-card">
           <div class="home-card-inside">
@@ -49,12 +49,13 @@
       <div class="col-xs-12 col-sm-4 home-card">
         <div class="home-card-inside">
         <div class="home-image"> <%= cl_image_tag("brain", width: 80, height: 80) %> </div>
-        <div> <p> et surtout, ne plus se casser la tête tous les soirs. </p></div>
+        <div> <p>ne plus se casser la tête tous les soirs. </p></div>
+        <div class="home-accent"> <p> et surtout</p></div>
         </div>
       </div>
     </div>
 
-    <h2>Concrétement, ça ressemble à :</h2>
+    <h2>Concrétement, ca ressemble à :</h2>
     <div class="row">
         <div class="col-xs-12 col-sm-4 home-card">
           <div class="home-card-inside">
