--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -6,10 +6,11 @@
 }
 
 .home-button {
-  padding: 10px 15px;
+  padding: 10px 20px;
   color: white;
   font-weight: bold;
   margin-bottom: 20px;
+  border: 1px solid white;
 
   &:active {
     color: white;
@@ -26,4 +27,24 @@
 .home-button-inscription {
   margin-top: 3%;
   margin-left: 65%;
+}
+
+
+.button_new_menu {
+  border-color: $green;
+  text-align: center;
+  margin: 2em auto;
+  input {
+  background-color: transparent;
+  border: 1px solid $green;
+  box-shadow: 0;
+  color: $green;
+  padding: 0.5em;
+  }
+  &:hover input {
+    text-decoration: none;
+    color: $green;
+    border-bottom: .2em solid $green;
+  }
+
 }
