--- a/app/assets/stylesheets/pages/_menu.scss
+++ b/app/assets/stylesheets/pages/_menu.scss
@@ -4,7 +4,6 @@
   background-color: transparent;
   border-top: 2px dashed $green;
   border-bottom: 2px dashed $green;
-
   margin-bottom: 10px;
   padding: 1em;
   width: 100%;
@@ -82,7 +81,7 @@
   background-color: transparent;
   border: 1px solid $green;
   box-shadow: 0;
-  color: white;
+  color: $dark-gray;
   padding: 0.5em;
   }
 }
@@ -96,13 +95,13 @@
  }
 
 .display_repa {
-  color: white;
+  color: $dark-gray;
   font-size: 0.9em;
   margin: 0.5em;
   padding-top: 5px;
   padding-bottom: 5px;
   text-align: center;
-  border: 1px solid white;
+  border: 1px solid $green;
   width: 100%;
   .edit_plat {
     width: 100%;
