--- a/app/assets/stylesheets/pages/_menu.scss
+++ b/app/assets/stylesheets/pages/_menu.scss
@@ -33,26 +33,28 @@
 .links-menu {
   display: flex;
   justify-content: space-around;
-  .link-menu1 {
-    font-size : 1em;
-    border: 1px solid $orange;
-    padding: 0.6em;
-    border-radius: 1px;
-    width: 2.5em;
-    height: 2.5em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .link-menu1:hover {
-    background-color: $orange;
-  }
-  .link-menu1 i {
-    color: $orange;
-  }
-  .link-menu1:hover i {
-    color: white;
-  }
+}
+
+.link-menu1 {
+  background-color: white;
+  font-size : 1em;
+  border: 1px solid $orange;
+  padding: 0.6em;
+  border-radius: 1px;
+  width: 2.5em;
+  height: 2.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.link-menu1:hover {
+  background-color: $orange;
+}
+.link-menu1 i {
+  color: $orange;
+}
+.link-menu1:hover i {
+  color: white;
 }
 
 .menu-editlink {
@@ -68,23 +70,37 @@
 
  /* menu_new */
 
-.form_new_menu {
+ .new_menu {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  p {
+    padding-top: 0;
+  }
+ }
+
+.form_new_menu {
+  width: 73%;
+  height : 2.5em;
+  position: relative;
 }
 
-.button_new_menu {
-  text-align: center;
-  margin: 2em auto;
+.calendar-label {
+  position: absolute;
+  top: -18px;
+  left: 10px;
+}
+
+.calendar_new_menu {
+  width: 100%;
+  height : 100%;
   input {
-  background-color: transparent;
-  border: 1px solid $green;
-  box-shadow: 0;
-  color: $dark-gray;
-  padding: 0.5em;
+    width: 100%;
+  height : 100%;
+    color: $dark-gray;
+
   }
 }
+
 
 
  /* menu show */
