--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -48,3 +48,11 @@
   }
 
 }
+
+
+.submit-buttons {
+    background-color: transparent;
+    color: $orange;
+    border: none;
+    box-shadow: none;
+  }
