--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -1,45 +1,47 @@
-<div class="container">
-  <h1>Menus#show</h1>
-
-  <h2>Semaine du <%= @startday[2] %> / <%= @startday[1] %> / <%= @startday[0] %>  </h2>
-
-
+<div class="container navbar-space">
+  <h1>Mon menu</h1>
+  <h2>du <%= @startday[2] %> / <%= @startday[1] %> / <%= @startday[0] %> au <%= @startday[2].to_i + 6 %> / <%= @startday[1] %> / <%= @startday[0] %>  </h2>
   <% @days.each do |day| %>
     <div class="menu-week">
-
-      <h3> <%= day.weekday %> <%= link_to menu_day_path(menu_id: @menu.id,id: day.id) do  %>
-        <i class="fas fa-pencil-alt"></i>
-      <% end %> </h3>
-        <div class="display_all_repas">
-          <% day.repas.each do |repa| %>
-
-            <div class="display_repa">
-
-            <%= repa.repastype.upcase %>
-                <% repa.plats.sort{ |x,y| x.id <=> y.id }.each do |plat| %>
-                  <div class="edit_platname">
-
-                    <%= simple_form_for([@menu, plat], url: menu_day_repa_plat_path(menu_id: @menu.id, day_id: plat.repa.day.id, repa_id: plat.repa.id, id: plat.id), method: :put, remote: true) do |f| %>
-                      <div class="form_platname form-inline">
-                        <span class="plattype-platname">  <%= plat.plattype %></span>
-                        <%= f.input :name, label: false %>
-                        <%= f.input :link, placeholder: "Lien vers la recette", label: false %>
-                        <%= button_tag type: 'submit', class: "submit-buttons" do %>
-                          <i class="fas fa-check"></i>
-                        <% end %>
-                      </div>
+      <h3> <%= day.weekday %>
+        <%= link_to menu_day_path(menu_id: @menu.id,id: day.id) do  %>
+          <i class="fas fa-pencil-alt"></i>
+        <% end %> </h3>
+      <div class="row">
+        <% day.repas.each do |repa| %>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="lastmenu display_repa">
+            <p class="repastype"> <%= repa.repastype.upcase %></p>
+            <% repa.plats.sort{ |x,y| x.id <=> y.id }.each do |plat| %>
+              <div class="edit_platname">
+                <%= simple_form_for([@menu, plat], url: menu_day_repa_plat_path(menu_id: @menu.id, day_id: plat.repa.day.id, repa_id: plat.repa.id, id: plat.id), method: :put, remote: true) do |f| %>
+                  <div class="form_platname form-inline row">
+                    <div class="col-xs-10 row">
+                    <div class="plattype-platname col-xs-4">  <%= plat.plattype %></div>
+                    <div class="col-xs-8 edit-input">
+                    <%= f.input :name, label: false %></div>
+                    <div class="plattype-platname col-xs-4">  <i class="fas fa-link"></i></div>
+                    <div class="col-xs-8 edit-input">
+                    <%= f.input :link, placeholder: "Lien vers la recette", label: false %>
+                  </div>
+                    </div>
+                    <div class="col-xs-2">
+                    <%= button_tag type: 'submit', class: "submit-buttons" do %>
+                      <i class="fas fa-check"></i>
                     <% end %>
+                    </div>
                   </div>
                 <% end %>
+              </div>
+            <% end %>
             </div>
+          </div>
 
-          <% end %>
-        </div>
+        <% end %>
+      </div>
     </div>
   <% end %>
 
-<%= link_to "Créer mes listes", menu_ingredients_path(menu_id: @menu.id)  %>
-<%= link_to "Tous mes menus", menus_path  %>
-<br>
-<p>:)</p>
+  <%= link_to "Créer mes listes", menu_ingredients_path(menu_id: @menu.id)  %>
+  <%= link_to "Tous mes menus", menus_path  %>
 </div>
